# kfi-fhir-input

./: .copier-answers.yml  .gitignore  404.html  CONTRIBUTING.md  LICENSE  ModelRelease.md  README.md  RELEASING.md  config.public.mk  index.html  justfile  mkdocs.yml  project.justfile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  publish-sqla.yaml  release.yaml
about/: index.html
docs/: about.md  index.md
docs/elements/: harmony.csv
docs/schema/: kfi_fhir_input.yaml
elements/: harmony.csv  index.html
elements/AccessPolicy/: index.html
elements/AgeAt/: index.html
elements/Aliquot/: index.html
elements/Any/: index.html
elements/AssociatedParty/: index.html
elements/Boolean/: index.html
elements/Coding/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/EnumAccessPolicyCode/: index.html
elements/EnumAgeValueType/: index.html
elements/EnumAssertionType/: index.html
elements/EnumBirthSex/: index.html
elements/EnumCollectionStatus/: index.html
elements/EnumConsanguinity/: index.html
elements/EnumConsentScope/: index.html
elements/EnumConsentStateCodes/: index.html
elements/EnumDataAccessType/: index.html
elements/EnumDobMethod/: index.html
elements/EnumEntityAsserter/: index.html
elements/EnumEthnicity/: index.html
elements/EnumFamilyRelationship/: index.html
elements/EnumFamilyType/: index.html
elements/EnumFileMetaDataType/: index.html
elements/EnumOffsetType/: index.html
elements/EnumPatientKnowledgeSource/: index.html
elements/EnumPopulation/: index.html
elements/EnumRace/: index.html
elements/EnumRelationshipKnowledgeSource/: index.html
elements/EnumResearchCollectionType/: index.html
elements/EnumResearchStudyPartyOrganizationType/: index.html
elements/EnumResearchStudyPartyRole/: index.html
elements/EnumSpecimenAvailability/: index.html
elements/EnumStudyStatus/: index.html
elements/Family/: index.html
elements/FamilyRelationship/: index.html
elements/FileLocation/: index.html
elements/FileMetaData/: index.html
elements/Float/: index.html
elements/HasAccessPolicy/: index.html
elements/Institution/: index.html
examples/: README.md
project/: README.md
schema/: kfi_fhir_input.yaml
scripts/: gen_harmony.py  hatch_build.py
search/: search_index.json
tests/: __init__.py  test_data.py
(+294 files in other folders)
