[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "tomli"]
build-backend = "hatchling.build"

[project]
name = "kfi_fhir_input"
description = "Source table for FHIR ETL for KF and INCLUDE"
authors = [
  {name = "Eric Torstenson", email = "eric.s.torstenson@vumc.org"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.9.4",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "ftd-dd @ git+https://github.com/carrollaboratory/ftd-dd",
    "hatchling>=1.27.0",
    "tomli>=2.0.0"
]

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.build.targets.sdist]
exclude = [
  ".direnv",
  ".venv",
  "scratch"
]
include = [
  "project/sqlalchemy/",
  "scripts/",
]
# Release the SQL Alchemy files
[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

# Moving this into the python script to make the changes more portable.
# Will leave this around for a bit in case I discover something breaking.
# [tool.hatch.build.targets.wheel]
# packages = ["kfi_fhir_input"]
# include = ["kfi_fhir_input/*.csv"]

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/kfi_fhir_input/datamodel/kfi_fhir_input_pydantic.py",
  "src/kfi_fhir_input/datamodel/kfi_fhir_input.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/kfi_fhir_input/datamodel/kfi_fhir_input_pydantic.py",
  "src/kfi_fhir_input/datamodel/kfi_fhir_input.py",
]
